--- a/BeerApp/Base.lproj/Main.storyboard
+++ b/BeerApp/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="mYe-vO-zsS">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="2ZF-zZ-7lv">
@@ -34,10 +34,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="mYe-vO-zsS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Lux-Xo-mds"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mYe-vO-zsS" secondAttribute="trailing" id="Mwm-lA-wa8"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="mYe-vO-zsS" secondAttribute="bottom" id="YoX-Re-TCE"/>
-                            <constraint firstItem="mYe-vO-zsS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="czz-K0-Wtg"/>
+                            <constraint firstItem="mYe-vO-zsS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="IgS-Za-tnz"/>
+                            <constraint firstItem="mYe-vO-zsS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="f8b-Xg-Fhw"/>
+                            <constraint firstItem="mYe-vO-zsS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="jbn-Ww-jy1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="mYe-vO-zsS" secondAttribute="bottom" id="q91-iH-LBe"/>
                         </constraints>
                     </view>
                     <connections>
@@ -46,7 +46,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="98"/>
+            <point key="canvasLocation" x="18.840579710144929" y="97.767857142857139"/>
         </scene>
     </scenes>
     <resources>
