--- a/BeerApp/BeerItemTableViewCell.xib
+++ b/BeerApp/BeerItemTableViewCell.xib
@@ -4,13 +4,12 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="87" id="KGk-i7-Jjw" customClass="BeerItemTableViewCell" customModule="BeerApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BeerItemCell" rowHeight="87" id="KGk-i7-Jjw" customClass="BeerItemTableViewCell" customModule="BeerApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="446" height="87"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -24,11 +23,6 @@
                             <constraint firstAttribute="height" constant="100" id="mQ4-Wm-m5W"/>
                         </constraints>
                     </imageView>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aCh-37-6LQ">
-                        <rect key="frame" x="103" y="-21" width="240" height="128"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="rMn-ZI-Xdo">
                         <rect key="frame" x="116" y="0.0" width="330" height="57"/>
                         <subviews>
@@ -59,14 +53,11 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="contentView" destination="H2p-sc-9uM" id="7IE-YY-0w3"/>
+                <outlet property="beerAlcoholContentLabel" destination="sQ6-Vy-nYf" id="VKK-3e-JEH"/>
+                <outlet property="beerImageView" destination="jUs-Po-jNI" id="HbZ-4Y-NFb"/>
+                <outlet property="beerNameLabel" destination="8cg-bU-2Ek" id="gFa-4s-dAj"/>
             </connections>
             <point key="canvasLocation" x="223" y="17"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
